--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,6 @@
     ],
     "dependencies": {
         "jquery": ">= 1.5"
-    }
+    },
+    "homepage": "https://github.com/peteboere/placeholder-shim"
 }
